# avogadrolibs

.github/workflows/: add_artifact_urls.yml  build_cmake.yml  build_flatpak.yml  build_linux.yml  build_mac.yml  build_qt5.yml  build_windows.yml
avogadro/qtgui/: pluginmetadata.cpp  pluginmetadata.h  toolplugin.cpp  toolplugin.h
avogadro/qtopengl/: glwidget.h
avogadro/qtplugins/: CMakeLists.txt
avogadro/qtplugins/aligntool/: CMakeLists.txt  aligntool.cpp
avogadro/qtplugins/bondcentrictool/: CMakeLists.txt  bondcentrictool.cpp
avogadro/qtplugins/focus/: CMakeLists.txt
avogadro/qtplugins/forcefield/: CMakeLists.txt  forcefield.cpp  obmmenergy.cpp  scriptenergy.cpp
avogadro/qtplugins/label/: CMakeLists.txt
avogadro/qtplugins/manipulator/: manipulatewidget.ui  manipulator.cpp  manipulator.h
avogadro/qtplugins/molecularproperties/: molecularpropertiesdialog.cpp  molecularpropertiesdialog.h  molecularpropertiesdialog.ui
avogadro/qtplugins/navigator/: navigator.cpp
avogadro/qtplugins/overlayaxes/: CMakeLists.txt
avogadro/qtplugins/playertool/: CMakeLists.txt
avogadro/qtplugins/resetview/: CMakeLists.txt
avogadro/qtplugins/surfaces/: CMakeLists.txt
avogadro/qtplugins/svg/: CMakeLists.txt
avogadro/qtplugins/templatetool/: CMakeLists.txt
i18n/: avogadrolibs.pot
